--- a/Alivia/src/main/resources/templates/page1.html
+++ b/Alivia/src/main/resources/templates/page1.html
@@ -27,43 +27,12 @@
 </head>
 <body>
   
-  <section class="menu menu1 cid-srfzFMvYYU" once="menu" id="menu1-1p">
-    
-
-    <nav class="navbar navbar-dropdown navbar-fixed-top navbar-expand-lg">
-        <div class="container">
-            <div class="navbar-brand">
-                
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-black text-primary display-1" href="index.html">Alivia</a></span>
-            </div>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <div class="hamburger">
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                </div>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="page1.html"><span class="mbri-idea mbr-iconfont mbr-iconfont-btn"></span>
-                            Inspiration</a></li>
-                    <li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="page2.html"><span class="mbri-edit mbr-iconfont mbr-iconfont-btn"></span>
-                            Education</a></li>
-                    <li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="page3.html"><span class="mbri-shopping-cart mbr-iconfont mbr-iconfont-btn"></span>Stocks</a>
-                    </li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="page4.html"><span class="mbri-cloud mbr-iconfont mbr-iconfont-btn"></span>Clouds</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="page5.html"><span class="mbri-setting2 mbr-iconfont mbr-iconfont-btn"></span>Soft</a></li></ul>
-                
-                
-            </div>
-        </div>
-    </nav>
-</section>
-
-<section class="features4 cid-srePqzw5P7" id="features4-z">
+  <section class="features4 cid-srePqzw5P7" id="features4-z">
     
     <div class="mbr-overlay"></div>
     <div class="container-fluid">
         
-        <div id="body" class="row mt-4">
+        <div class="row mt-4">
             
             <div class="item features-image сol-12 col-md-6 col-lg-3 active">
                 <div class="item-wrapper">
@@ -72,7 +41,7 @@
                     </div>
                     <div class="item-content">
                         <h5 class="item-title mbr-fonts-style display-5"><strong>National Geographic Photography</strong></h5>
-
+                        
                         <p class="mbr-text mbr-fonts-style mt-3 display-7">Stunning wildlife photography</p>
                     </div>
                     <div class="mbr-section-btn item-footer mt-2"><a href="https://www.nationalgeographic.com/photography/" class="btn item-btn btn-black display-7" target="_blank">Go to &gt;</a></div>
@@ -181,7 +150,38 @@
             </div>
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/h" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Designed with Mobirise - <a href="https://mobirise.site/l" style="color:#aaa;">More</a></p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section>
+
+<section class="menu menu1 cid-srfzFMvYYU" once="menu" id="menu1-1p">
+    
+
+    <nav class="navbar navbar-dropdown navbar-fixed-top navbar-expand-lg">
+        <div class="container">
+            <div class="navbar-brand">
+                
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-black text-primary display-1" href="index.html">Alivia</a></span>
+            </div>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <div class="hamburger">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="page1.html"><span class="mbri-idea mbr-iconfont mbr-iconfont-btn"></span>
+                            Inspiration</a></li>
+                    <li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="page2.html"><span class="mbri-edit mbr-iconfont mbr-iconfont-btn"></span>
+                            Education</a></li>
+                    <li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="page3.html"><span class="mbri-shopping-cart mbr-iconfont mbr-iconfont-btn"></span>Stocks</a>
+                    </li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="page4.html"><span class="mbri-cloud mbr-iconfont mbr-iconfont-btn"></span>Clouds</a></li><li class="nav-item"><a class="nav-link link text-black text-primary display-4" href="page5.html"><span class="mbri-setting2 mbr-iconfont mbr-iconfont-btn"></span>Soft</a></li></ul>
+                
+                
+            </div>
+        </div>
+    </nav>
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/q" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Mobirise free maker - <a href="https://mobirise.site/n" style="color:#aaa;">More here</a></p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
 </body>
