--- a/Alivia/src/main/resources/templates/page3.html
+++ b/Alivia/src/main/resources/templates/page3.html
@@ -67,119 +67,112 @@
             <div class="item features-image сol-12 col-md-6 col-lg-4">
                 <div class="item-wrapper">
                     <div class="item-img">
-                        <img src="assets/images/product2.jpg" alt="" title="">
+                        <img src="assets/images/zastavkin.gif" alt="" title="">
                     </div>
                     <div class="item-content">
-                        <h5 class="item-title mbr-fonts-style display-5"><strong>Design</strong></h5>
+                        <h5 class="item-title mbr-fonts-style display-5"><strong>Stock PhotoClub</strong></h5>
                         <h6 class="item-subtitle mbr-fonts-style mt-1 display-7">Website Design</h6>
-                        <p class="mbr-text mbr-fonts-style mt-3 display-7"></p>
+                        <p class="mbr-text mbr-fonts-style mt-3 display-7">Forum for working with photo stocks</p>
                     </div>
-                    <div class="mbr-section-btn item-footer mt-2"><a href="" class="btn item-btn btn-black display-7" target="_blank">Go to &gt;</a></div>
+                    <div class="mbr-section-btn item-footer mt-2"><a href="http://zastavkin.com/forum" class="btn item-btn btn-black display-7" target="_blank">Go to &gt;</a></div>
                 </div>
             </div>
             <div class="item features-image сol-12 col-md-6 col-lg-4">
                 <div class="item-wrapper">
                     <div class="item-img">
-                        <img src="assets/images/product3.jpg" alt="" title="">
+                        <img src="assets/images/istock-logo-complete-750x312.png" alt="" title="">
                     </div>
                     <div class="item-content">
-                        <h5 class="item-title mbr-fonts-style display-5"><strong>Programming</strong></h5>
+                        <h5 class="item-title mbr-fonts-style display-5"><strong>iStock</strong></h5>
                         <h6 class="item-subtitle mbr-fonts-style mt-1 display-7"></h6>
-                        <p class="mbr-text mbr-fonts-style mt-3 display-7"></p>
+                        <p class="mbr-text mbr-fonts-style mt-3 display-7">Big and glamorous, it ranks first in terms of profitability</p>
                     </div>
-                    <div class="mbr-section-btn item-footer mt-2"><a href="" class="btn item-btn btn-black display-7" target="_blank">Go to &gt;</a></div>
+                    <div class="mbr-section-btn item-footer mt-2"><a href="https://www.istockphoto.com/?refnum=cloki" class="btn item-btn btn-black display-7" target="_blank">Go to &gt;</a></div>
                 </div>
             </div>
             <div class="item features-image сol-12 col-md-6 col-lg-4">
                 <div class="item-wrapper">
                     <div class="item-img">
-                        <img src="assets/images/product1.jpg" alt="" title="">
+                        <img src="assets/images/sstklogo-og-750x394.jpg" alt="" title="">
                     </div>
                     <div class="item-content">
-                        <h5 class="item-title mbr-fonts-style display-5"><strong>Branding</strong></h5>
+                        <h5 class="item-title mbr-fonts-style display-5"><strong>Shutterstock</strong></h5>
                         <h6 class="item-subtitle mbr-fonts-style mt-1 display-7">Creating Your Brand</h6>
-                        <p class="mbr-text mbr-fonts-style mt-3 display-7">Select the theme that suits you. Each theme
-                            in the Mobirise Website Software contains a set of unique blocks.<br></p>
+                        <p class="mbr-text mbr-fonts-style mt-3 display-7">Fast and convenient for large volumes<br></p>
                     </div>
-                    <div class="mbr-section-btn item-footer mt-2"><a href="" class="btn item-btn btn-black display-7" target="_blank">Go to &gt;</a></div>
+                    <div class="mbr-section-btn item-footer mt-2"><a href="https://submit.shutterstock.com" class="btn item-btn btn-black display-7" target="_blank">Go to &gt;</a></div>
                 </div>
             </div><div class="item features-image сol-12 col-md-6 col-lg-4">
                 <div class="item-wrapper">
                     <div class="item-img">
-                        <img src="assets/images/background1.jpg" alt="" title="" data-slide-to="3">
+                        <img src="assets/images/2221depositphotos800800square-480x480.png" alt="" title="" data-slide-to="3">
                     </div>
                     <div class="item-content">
-                        <h5 class="item-title mbr-fonts-style display-5"><strong>Branding</strong></h5>
+                        <h5 class="item-title mbr-fonts-style display-5"><strong>depositphotos</strong></h5>
                         <h6 class="item-subtitle mbr-fonts-style mt-1 display-7">Creating Your Brand</h6>
-                        <p class="mbr-text mbr-fonts-style mt-3 display-7">Select the theme that suits you. Each theme
-                            in the Mobirise Website Software contains a set of unique blocks.<br></p>
+                        <p class="mbr-text mbr-fonts-style mt-3 display-7">Convenient and understandable, includes a simple exam<br></p>
                     </div>
-                    <div class="mbr-section-btn item-footer mt-2"><a href="" class="btn item-btn btn-black display-7" target="_blank">Go to &gt;</a></div>
+                    <div class="mbr-section-btn item-footer mt-2"><a href="https://ru.depositphotos.com/?ref=1005116" class="btn item-btn btn-black display-7" target="_blank">Go to &gt;</a></div>
                 </div>
             </div><div class="item features-image сol-12 col-md-6 col-lg-4">
                 <div class="item-wrapper">
                     <div class="item-img">
-                        <img src="assets/images/mbr-1920x1134.jpg" alt="" title="" data-slide-to="4">
+                        <img src="assets/images/bigstock-600x315.jpg" alt="" title="" data-slide-to="4">
                     </div>
                     <div class="item-content">
-                        <h5 class="item-title mbr-fonts-style display-5"><strong>Branding</strong></h5>
+                        <h5 class="item-title mbr-fonts-style display-5"><strong>BigStock</strong></h5>
                         <h6 class="item-subtitle mbr-fonts-style mt-1 display-7">Creating Your Brand</h6>
-                        <p class="mbr-text mbr-fonts-style mt-3 display-7">Select the theme that suits you. Each theme
-                            in the Mobirise Website Software contains a set of unique blocks.<br></p>
+                        <p class="mbr-text mbr-fonts-style mt-3 display-7">Not very large, but quite comfortable, no exam<br></p>
                     </div>
-                    <div class="mbr-section-btn item-footer mt-2"><a href="" class="btn item-btn btn-black display-7" target="_blank">Go to &gt;</a></div>
+                    <div class="mbr-section-btn item-footer mt-2"><a href="https://www.bigstockphoto.com/ru/?refid=WoyZ5FotUv" class="btn item-btn btn-black display-7" target="_blank">Go to &gt;</a></div>
                 </div>
             </div><div class="item features-image сol-12 col-md-6 col-lg-4">
                 <div class="item-wrapper">
                     <div class="item-img">
-                        <img src="assets/images/background5.jpg" alt="" title="" data-slide-to="5">
+                        <img src="assets/images/dreamstime-landing-free-photos-750x394.jpg" alt="" title="" data-slide-to="5">
                     </div>
                     <div class="item-content">
-                        <h5 class="item-title mbr-fonts-style display-5"><strong>Branding</strong></h5>
+                        <h5 class="item-title mbr-fonts-style display-5"><strong>dreamstime</strong></h5>
                         <h6 class="item-subtitle mbr-fonts-style mt-1 display-7">Creating Your Brand</h6>
-                        <p class="mbr-text mbr-fonts-style mt-3 display-7">Select the theme that suits you. Each theme
-                            in the Mobirise Website Software contains a set of unique blocks.<br></p>
+                        <p class="mbr-text mbr-fonts-style mt-3 display-7">Registration without exam<br></p>
                     </div>
-                    <div class="mbr-section-btn item-footer mt-2"><a href="" class="btn item-btn btn-black display-7" target="_blank">Go to &gt;</a></div>
+                    <div class="mbr-section-btn item-footer mt-2"><a href="https://www.dreamstime.com" class="btn item-btn btn-black display-7" target="_blank">Go to &gt;</a></div>
                 </div>
             </div><div class="item features-image сol-12 col-md-6 col-lg-4">
                 <div class="item-wrapper">
                     <div class="item-img">
-                        <img src="assets/images/mbr-1-1920x1440.jpg" alt="" title="" data-slide-to="6">
+                        <img src="assets/images/fotolia-by-adobe-logo-750x380.png" alt="" title="" data-slide-to="6">
                     </div>
                     <div class="item-content">
-                        <h5 class="item-title mbr-fonts-style display-5"><strong>Branding</strong></h5>
+                        <h5 class="item-title mbr-fonts-style display-5"><strong>fotolia</strong></h5>
                         <h6 class="item-subtitle mbr-fonts-style mt-1 display-7">Creating Your Brand</h6>
-                        <p class="mbr-text mbr-fonts-style mt-3 display-7">Select the theme that suits you. Each theme
-                            in the Mobirise Website Software contains a set of unique blocks.<br></p>
+                        <p class="mbr-text mbr-fonts-style mt-3 display-7">Good for beginners, no exam<br></p>
                     </div>
-                    <div class="mbr-section-btn item-footer mt-2"><a href="" class="btn item-btn btn-black display-7" target="_blank">Go to &gt;</a></div>
+                    <div class="mbr-section-btn item-footer mt-2"><a href="https://ru.fotolia.com" class="btn item-btn btn-black display-7" target="_blank">Go to &gt;</a></div>
                 </div>
             </div><div class="item features-image сol-12 col-md-6 col-lg-4">
                 <div class="item-wrapper">
                     <div class="item-img">
-                        <img src="assets/images/mbr-1920x1357.jpg" alt="" title="" data-slide-to="7">
+                        <img src="assets/images/canstock-logo-300-transparent-blanc-1-300x214.png" alt="" title="" data-slide-to="7">
                     </div>
                     <div class="item-content">
-                        <h5 class="item-title mbr-fonts-style display-5"><strong>Branding</strong></h5>
+                        <h5 class="item-title mbr-fonts-style display-5"><strong>CanStockPhoto</strong></h5>
                         <h6 class="item-subtitle mbr-fonts-style mt-1 display-7">Creating Your Brand</h6>
-                        <p class="mbr-text mbr-fonts-style mt-3 display-7">Select the theme that suits you. Each theme
-                            in the Mobirise Website Software contains a set of unique blocks.<br></p>
+                        <p class="mbr-text mbr-fonts-style mt-3 display-7">Medium-sized photo bank. This means that in order to make a good living, you will have to upload a lot of photos.<br></p>
                     </div>
-                    <div class="mbr-section-btn item-footer mt-2"><a href="" class="btn item-btn btn-black display-7" target="_blank">Go to &gt;</a></div>
+                    <div class="mbr-section-btn item-footer mt-2"><a href="https://www.canstockphoto.com" class="btn item-btn btn-black display-7" target="_blank">Go to &gt;</a></div>
                 </div>
             </div><div class="item features-image сol-12 col-md-6 col-lg-4">
                 <div class="item-wrapper">
                     <div class="item-img">
-                        <img src="assets/images/mbr-1920x1280.jpg" alt="" title="" data-slide-to="8">
+                        <img src="assets/images/123rf-logo-750x299.jpg" alt="" title="" data-slide-to="8">
                     </div>
                     <div class="item-content">
-                        <h5 class="item-title mbr-fonts-style display-5"><strong>Branding</strong></h5>
+                        <h5 class="item-title mbr-fonts-style display-5"><strong>123RF</strong></h5>
                         <h6 class="item-subtitle mbr-fonts-style mt-1 display-7">Creating Your Brand</h6>
-                        <p class="mbr-text mbr-fonts-style mt-3 display-7">Select the theme that suits you. Each theme
-                            in the Mobirise Website Software contains a set of unique blocks.<br></p>
+                        <p class="mbr-text mbr-fonts-style mt-3 display-7">A promising stock of budget materials, including photos<br></p>
                     </div>
-                    <div class="mbr-section-btn item-footer mt-2"><a href="" class="btn item-btn btn-black display-7" target="_blank">Go to &gt;</a></div>
+                    <div class="mbr-section-btn item-footer mt-2"><a href="https://ru.123rf.com/aboutus.php" class="btn item-btn btn-black display-7" target="_blank">Go to &gt;</a></div>
                 </div>
             </div>
 
@@ -200,7 +193,7 @@
             </div>
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/j" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Made with <a href="https://mobirise.site/b" style="color:#aaa;">Mobirise</a> theme</p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/m" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;"><a href="https://mobirise.site/r" style="color:#aaa;">This website</a> was started with Mobirise templates</p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
 </body>
