--- a/Alivia/src/main/resources/templates/page4.html
+++ b/Alivia/src/main/resources/templates/page4.html
@@ -27,14 +27,91 @@
 </head>
 <body>
   
-  <section class="menu menu1 cid-srfzFMvYYU" once="menu" id="menu1-1p">
+  <section class="features4 cid-srfb7o9bZ3" id="features4-1e">
+    
+    <div class="mbr-overlay"></div>
+    <div class="container-fluid">
+        
+        <div class="row mt-4">
+            <div class="item features-image сol-12 col-md-6 col-lg-4">
+                <div class="item-wrapper">
+                    <div class="item-img">
+                        <img src="assets/images/dropbox-logo2x-750x422.jpg" alt="" title="">
+                    </div>
+                    <div class="item-content">
+                        <h5 class="item-title mbr-fonts-style display-5"><strong>Dropbox</strong></h5>
+                        <h6 class="item-subtitle mbr-fonts-style mt-1 display-7">Website Design</h6>
+                        <p class="mbr-text mbr-fonts-style mt-3 display-7">Free 2GB or $ 9.99 / month for 1TB</p>
+                    </div>
+                    <div class="mbr-section-btn item-footer mt-2"><a href="https://www.dropbox.com" class="btn item-btn btn-black display-7" target="_blank">Go to &gt;</a></div>
+                </div>
+            </div><div class="item features-image сol-12 col-md-6 col-lg-4">
+                <div class="item-wrapper">
+                    <div class="item-img">
+                        <img src="assets/images/onedrive-logo-750x422.jpg" alt="" title="" data-slide-to="1">
+                    </div>
+                    <div class="item-content">
+                        <h5 class="item-title mbr-fonts-style display-5"><strong>OneDrive</strong></h5>
+                        <h6 class="item-subtitle mbr-fonts-style mt-1 display-7">Website Design</h6>
+                        <p class="mbr-text mbr-fonts-style mt-3 display-7">A basic account with 5 GB is free, for 1.99$ a month you get 100 GB, and for 69.99$ a month - 1 TB</p>
+                    </div>
+                    <div class="mbr-section-btn item-footer mt-2"><a href="https://www.microsoft.com/en-ww/microsoft-365/onedrive/online-cloud-storage" class="btn item-btn btn-black display-7" target="_blank">Go to &gt;</a></div>
+                </div>
+            </div>
+            <div class="item features-image сol-12 col-md-6 col-lg-4">
+                <div class="item-wrapper">
+                    <div class="item-img">
+                        <img src="assets/images/logo-lockup-drive-icon-horizontal-750x277.png" alt="" title="" data-slide-to="2">
+                    </div>
+                    <div class="item-content">
+                        <h5 class="item-title mbr-fonts-style display-5"><strong>Google Drive</strong></h5>
+                        <h6 class="item-subtitle mbr-fonts-style mt-1 display-7"></h6>
+                        <p class="mbr-text mbr-fonts-style mt-3 display-7">15GB free, $ 1.99/month for 100GB, and $ 9.99/month for 1TB.</p>
+                    </div>
+                    <div class="mbr-section-btn item-footer mt-2"><a href="https://drive.google.com" class="btn item-btn btn-black display-7" target="_blank">Go to &gt;</a></div>
+                </div>
+            </div>
+            <div class="item features-image сol-12 col-md-6 col-lg-4">
+                <div class="item-wrapper">
+                    <div class="item-img">
+                        <img src="assets/images/1280px-01-mega-logo-750x244.png" alt="" title="" data-slide-to="3">
+                    </div>
+                    <div class="item-content">
+                        <h5 class="item-title mbr-fonts-style display-5"><strong>Mega</strong></h5>
+                        <h6 class="item-subtitle mbr-fonts-style mt-1 display-7">Creating Your Brand</h6>
+                        <p class="mbr-text mbr-fonts-style mt-3 display-7">50GB free, $ 4.99/month for 400GB, $9.99/month for 2TB, $19.99/month for 8TB, $29.99/month for 16TB.</p>
+                    </div>
+                    <div class="mbr-section-btn item-footer mt-2"><a href="https://mega.nz" class="btn item-btn btn-black display-7" target="_blank">Go to &gt;</a></div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+</section>
+
+<section class="footer7 cid-srfmrXLnLf" once="footers" id="footer7-1m">
+
+    
+
+    
+
+    <div class="container">
+        <div class="media-container-row align-center mbr-white">
+            <div class="col-12">
+                <p class="mbr-text mb-0 mbr-fonts-style display-7">SKYDRAGON Alivia&nbsp;</p>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="menu menu1 cid-srfzFMvYYU" once="menu" id="menu1-1p">
     
 
     <nav class="navbar navbar-dropdown navbar-fixed-top navbar-expand-lg">
         <div class="container">
             <div class="navbar-brand">
                 
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-black display-2" href="https://mobiri.se">Alivia</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-black text-primary display-1" href="index.html">Alivia</a></span>
             </div>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <div class="hamburger">
@@ -56,103 +133,7 @@
             </div>
         </div>
     </nav>
-</section>
-
-<section class="features4 cid-srfb7o9bZ3" id="features4-1e">
-    
-    <div class="mbr-overlay"></div>
-    <div class="container-fluid">
-        
-        <div class="row mt-4">
-            <div class="item features-image сol-12 col-md-6 col-lg-4">
-                <div class="item-wrapper">
-                    <div class="item-img">
-                        <img src="assets/images/product2.jpg" alt="" title="">
-                    </div>
-                    <div class="item-content">
-                        <h5 class="item-title mbr-fonts-style display-5"><strong>Dropbox</strong></h5>
-                        <h6 class="item-subtitle mbr-fonts-style mt-1 display-7">Website Design</h6>
-                        <p class="mbr-text mbr-fonts-style mt-3 display-7">Free 2GB or $ 9.99 / month for 1TB</p>
-                    </div>
-                    <div class="mbr-section-btn item-footer mt-2"><a href="" class="btn item-btn btn-black display-7" target="_blank">Start Now
-                            &gt;</a></div>
-                </div>
-            </div><div class="item features-image сol-12 col-md-6 col-lg-4">
-                <div class="item-wrapper">
-                    <div class="item-img">
-                        <img src="assets/images/background5.jpg" alt="" title="" data-slide-to="1">
-                    </div>
-                    <div class="item-content">
-                        <h5 class="item-title mbr-fonts-style display-5"><strong>OneDrive</strong></h5>
-                        <h6 class="item-subtitle mbr-fonts-style mt-1 display-7">Website Design</h6>
-                        <p class="mbr-text mbr-fonts-style mt-3 display-7">A basic account with 5 GB is free, for 1.99$ a month you get 100 GB, and for 69.99$ a month - 1 TB</p>
-                    </div>
-                    <div class="mbr-section-btn item-footer mt-2"><a href="" class="btn item-btn btn-black display-7" target="_blank">Start Now
-                            &gt;</a></div>
-                </div>
-            </div>
-            <div class="item features-image сol-12 col-md-6 col-lg-4">
-                <div class="item-wrapper">
-                    <div class="item-img">
-                        <img src="assets/images/product3.jpg" alt="" title="" data-slide-to="2">
-                    </div>
-                    <div class="item-content">
-                        <h5 class="item-title mbr-fonts-style display-5"><strong>Programming</strong></h5>
-                        <h6 class="item-subtitle mbr-fonts-style mt-1 display-7"></h6>
-                        <p class="mbr-text mbr-fonts-style mt-3 display-7"></p>
-                    </div>
-                    <div class="mbr-section-btn item-footer mt-2"><a href="" class="btn item-btn btn-black display-7" target="_blank">Start Now
-                            &gt;</a></div>
-                </div>
-            </div>
-            <div class="item features-image сol-12 col-md-6 col-lg-4">
-                <div class="item-wrapper">
-                    <div class="item-img">
-                        <img src="assets/images/product1.jpg" alt="" title="" data-slide-to="3">
-                    </div>
-                    <div class="item-content">
-                        <h5 class="item-title mbr-fonts-style display-5"><strong>Branding</strong></h5>
-                        <h6 class="item-subtitle mbr-fonts-style mt-1 display-7">Creating Your Brand</h6>
-                        <p class="mbr-text mbr-fonts-style mt-3 display-7">Select the theme that suits you. Each theme
-                            in the Mobirise Website Software contains a set of unique blocks.<br></p>
-                    </div>
-                    <div class="mbr-section-btn item-footer mt-2"><a href="" class="btn item-btn btn-black display-7" target="_blank">Start Now
-                            &gt;</a></div>
-                </div>
-            </div><div class="item features-image сol-12 col-md-6 col-lg-4">
-                <div class="item-wrapper">
-                    <div class="item-img">
-                        <img src="assets/images/background1.jpg" alt="" title="" data-slide-to="4">
-                    </div>
-                    <div class="item-content">
-                        <h5 class="item-title mbr-fonts-style display-5"><strong>Branding</strong></h5>
-                        <h6 class="item-subtitle mbr-fonts-style mt-1 display-7">Creating Your Brand</h6>
-                        <p class="mbr-text mbr-fonts-style mt-3 display-7">Select the theme that suits you. Each theme
-                            in the Mobirise Website Software contains a set of unique blocks.<br></p>
-                    </div>
-                    <div class="mbr-section-btn item-footer mt-2"><a href="" class="btn item-btn btn-black display-7" target="_blank">Start Now
-                            &gt;</a></div>
-                </div>
-            </div>
-
-        </div>
-    </div>
-</section>
-
-<section class="footer7 cid-srfmrXLnLf" once="footers" id="footer7-1m">
-
-    
-
-    
-
-    <div class="container">
-        <div class="media-container-row align-center mbr-white">
-            <div class="col-12">
-                <p class="mbr-text mb-0 mbr-fonts-style display-7">SKYDRAGON Alivia&nbsp;</p>
-            </div>
-        </div>
-    </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/j" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Made with Mobirise - <a href="https://mobirise.site/m" style="color:#aaa;">Check it</a></p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/d" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Website was <a href="https://mobirise.site/h" style="color:#aaa;">built with</a> Mobirise</p></section><script src="assets/web/assets/jquery/jquery.min.js"></script>  <script src="assets/popper/popper.min.js"></script>  <script src="assets/tether/tether.min.js"></script>  <script src="assets/bootstrap/js/bootstrap.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/dropdown/js/nav-dropdown.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
 </body>
